요한복음 설교
설교 인포그래픽

--- a/John010118/index.html
+++ b/John010118/index.html
@@ -78,14 +78,14 @@
                 </p>
 
             </div>
+<p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
             
         </div>
 
         <!-- Footer -->
         <footer class="bg-slate-50 p-6 text-center text-slate-500 text-sm border-t border-slate-100">
-<p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
 
-            &copy; 2026 말씀묵상. All rights reserved.
+            &copy; © 2026 말씀묵상. 푸른동산 지산교회 정재학 목사.
         </footer>
     </article>
 
