요한복음 설교
설교 인포그래픽

--- a/John011942/index.html
+++ b/John011942/index.html
@@ -128,10 +128,13 @@
         이제는 세상을 따르지 않고 오직 주님만 따르는 인생 되게 하여 주시옵소서.<br>
         보라, 믿으라, 따르라 말씀하신 우리 구주 예수 그리스도의 이름으로 기도합니다. 아멘.</p>
     </section>
+
+<p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
+
 </div>
 
 <footer>
-    <p>&copy; 2026 말씀묵상 - 푸른동산 지산교회 메시지</p>
+    <p>&copy;  © 2026 말씀묵상. 푸른동산 지산교회 정재학 목사</p>
 </footer>
 
 </body>
