--- a/John013542/index.html
+++ b/John013542/index.html
@@ -150,6 +150,7 @@
                 </p>
             </div>
         </section>
+<p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
 
     </main>
 
