--- a/John014351/index.html
+++ b/John014351/index.html
@@ -108,6 +108,8 @@
                 </p>
             </div>
 
+<p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
+            
         </article>
 
         <!-- Footer (Centered) -->
