요한복음 설교
설교 인포그래픽

--- a/John030121/index.html
+++ b/John030121/index.html
@@ -175,6 +175,7 @@
                     예수님의 이름으로 기도드립니다. 아멘."
                 </p>
             </div>
+<p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
         </div>
 
         <!-- Footer -->
