요한복음설교
설교 인포그래픽

--- a/John021325/index.html
+++ b/John021325/index.html
@@ -165,7 +165,7 @@
                 "성전 된 우리의 몸도 깨끗하게 되기를 원합니다. 내 아버지의 집이요, 만민이 기도하는 집으로 우리를 성결케 하옵소서. 몸만 있는 예배가 아닌 진정으로 마음을 드리는 예배자가 되게 하옵소서."
             </p>
         </section>
-
+<p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
     </main>
 
     <!-- 푸터 -->
