요한복음 설교
설교 인포그래픽

--- a/John020111/index.html
+++ b/John020111/index.html
@@ -335,6 +335,7 @@
                 하나님 나라 잔치에 귀하게 쓰임 받게 하옵소서.<br>
                 예수님의 이름으로 기도드립니다. 아멘.
             </p>
+            <p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
         </div>
 
         <footer>
