--- a/John020111/index.html
+++ b/John020111/index.html
@@ -336,7 +336,7 @@
                 예수님의 이름으로 기도드립니다. 아멘.
             </p>
            
-
+  </div>
         <footer>
  <p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
         </div>
