--- a/luke010104fact/index.html
+++ b/luke010104fact/index.html
@@ -365,6 +365,7 @@
                       💫 변화
                     </div>
                   </div>
+ <p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>                 
                 </div>
               </div>
             </div>
