--- a/luke011838gracefaith/index.html
+++ b/luke011838gracefaith/index.html
@@ -569,5 +569,6 @@ if (window.elementSdk) {
     });
 }
 </script>
+    <p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p> 
 </body>
 </html>
