누가복음 설교
설교 인포그래픽

--- a/luke013980praiserelay/index.html
+++ b/luke013980praiserelay/index.html
@@ -178,7 +178,7 @@
             <li>근심 걱정 가운데 성령 충만함으로 회복되고 찬양하는 자가 되게 하여 주시옵소서.</li>
             <li>내가 먼저 찬양하는 자 되어 찬양의 바톤을 이어가게 하옵소서.</li>
         </ul>
-
+<p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p> 
     </main>
 
     <footer class="text-center text-xs text-gray-500 mt-6 pb-4">
