누가복음 설교
설교 인포 그래픽

--- a/luke013980praiserelay/index.html
+++ b/luke013980praiserelay/index.html
@@ -183,8 +183,9 @@
     </main>
 
     <footer class="text-center text-xs text-gray-500 mt-6 pb-4">
-          © 2026 말씀묵상. 푸른동산 지산교회 정재학 목사
-
+<div class="inner-container">
+            © 2026 말씀묵상. 푸른동산 지산교회 정재학 목사
+        </div>
     </footer>
 </div>
 
