설교 인포 그래픽
설교방

--- a/index.html
+++ b/index.html
@@ -59,10 +59,15 @@
         
         </ul>
 
-    <footer style="margin-top: 50px; font-size: 0.8em; color: #888;">
-        &copy; 2026 정재학 AI. All rights reserved.
+    <!-- 푸터 영역 -->
+    <footer>
+        <div class="inner-container">
+            © 2026 말씀묵상. 푸른동산 지산교회 정재학 목사
+        </div>
     </footer>
+
 </body>
 </html>
+
 
 
