--- a/John040315/index.html
+++ b/John040315/index.html
@@ -301,5 +301,7 @@
             });
         });
     </script>
+
+<p style="margin-top: 30px;"><a href="../" style="text-decoration: none; color: #3498db; font-weight: bold;">⬅️ 자료실 목차로 돌아가기</a></p>
 </body>
 </html>
